# Titools_CLI

./: Cargo.toml  LICENSE  README.md  teste.bat
src/: main.rs
src/functions/: execute_reg.rs  file_copy.rs  msi_install.rs
src/modules/anydesk/: anydesk_id.rs  anydesk_install.rs  anydesk_password.rs
src/modules/firefox/: firefox_install.rs
src/modules/installer/: install_local.rs
src/modules/printer/: printer_share.rs  printer_spool_restart.rs
src/modules/seven_zip/: seven_zip_install.rs
src/modules/tech_cli/: tech_cli_update.rs
src/modules/titools/: titools.rs
wix/: main.wxs
