[package]
name = "rust"
version = "0.1.0"
edition = "2021"
authors = ["Herick <hericklucas.hlf@gmail.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[dependencies]
clap = "3.0"
runas = "0.1"
static_vcruntime = "2.0"
cargo-wix = "0.3.8"
lazy_static = "1.4.0"
dotenv = "0.15.0"

[build-dependencies]
clap = "3.0"
runas = "0.1"
static_vcruntime = "2.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"